--- a/style.css
+++ b/style.css
@@ -4,11 +4,23 @@
     padding: 0;
 }
 
+.menubtn{
+    position: absolute;
+    cursor: pointer;
+    top: 10px;
+    right: 30px;
+    z-index: 2;
+    font-size: 1.8rem;
+}
+
+.nav-main ul.nav-menu-right{
+    margin-right: 5px;
+}
 body{
     background-color: rgb(54, 55, 66);
     color: white;
     background-color: #000000;
-background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='80' height='105' viewBox='0 0 80 105'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='death-star' fill='%2306ff00' fill-opacity='0.045'%3E%3Cpath d='M20 10a5 5 0 0 1 10 0v50a5 5 0 0 1-10 0V10zm15 35a5 5 0 0 1 10 0v50a5 5 0 0 1-10 0V45zM20 75a5 5 0 0 1 10 0v20a5 5 0 0 1-10 0V75zm30-65a5 5 0 0 1 10 0v50a5 5 0 0 1-10 0V10zm0 65a5 5 0 0 1 10 0v20a5 5 0 0 1-10 0V75zM35 10a5 5 0 0 1 10 0v20a5 5 0 0 1-10 0V10zM5 45a5 5 0 0 1 10 0v50a5 5 0 0 1-10 0V45zm0-35a5 5 0 0 1 10 0v20a5 5 0 0 1-10 0V10zm60 35a5 5 0 0 1 10 0v50a5 5 0 0 1-10 0V45zm0-35a5 5 0 0 1 10 0v20a5 5 0 0 1-10 0V10z' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='80' height='105' viewBox='0 0 80 105'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='death-star' fill='%2306ff00' fill-opacity='0.045'%3E%3Cpath d='M20 10a5 5 0 0 1 10 0v50a5 5 0 0 1-10 0V10zm15 35a5 5 0 0 1 10 0v50a5 5 0 0 1-10 0V45zM20 75a5 5 0 0 1 10 0v20a5 5 0 0 1-10 0V75zm30-65a5 5 0 0 1 10 0v50a5 5 0 0 1-10 0V10zm0 65a5 5 0 0 1 10 0v20a5 5 0 0 1-10 0V75zM35 10a5 5 0 0 1 10 0v20a5 5 0 0 1-10 0V10zM5 45a5 5 0 0 1 10 0v50a5 5 0 0 1-10 0V45zm0-35a5 5 0 0 1 10 0v20a5 5 0 0 1-10 0V10zm60 35a5 5 0 0 1 10 0v50a5 5 0 0 1-10 0V45zm0-35a5 5 0 0 1 10 0v20a5 5 0 0 1-10 0V10z' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
     font-size: 16px ;
     font-family: "Oswald", sans-serif;
 }
@@ -82,7 +94,7 @@ hr{
     height: 600px;
     background: url(Imagenes/pexels-riicardol-14683691.jpg) no-repeat center center/cover;
     border-radius: 20px;
-    padding-bottom: 50px;
+    padding: 50px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -184,3 +196,128 @@ hr{
     margin: 10px 0 10px 0;
 }
 
+
+.bannercard2{
+    width: 100%;
+    height: 400px;
+    background: url(Imagenes/banner2.jpg);
+    background-size: cover;
+    background-position: center; 
+    background-repeat: no-repeat; 
+    margin-bottom: 40px;
+    margin-top: 10px;
+    display: flex; 
+    border-radius: 15px;
+}
+
+.bannercard2 .contenido{
+    padding: 40%;
+    padding: 130px 0 0 30px;
+    color: #f2f2f2;
+    text-shadow: 2px 1px 3px rgba(0, 0, 0, 0.8); /* Sombra de texto */
+
+}
+
+.bannercard2 p,
+.bannercard2 h2{
+    margin: 10px 0 10px 0;
+}
+
+/* social */
+
+.social{
+    margin: 50px;
+}
+
+.social p{
+    text-align: center;
+    font-size: 30px;
+    margin-bottom: 15px;
+}
+
+.links{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.links a{
+    margin:  0 30px;
+}
+
+.links a i{
+    font-size: 3rem;
+}
+
+/* pie de pagina */
+
+.pielinks{
+    background:#2f3640;
+    color: #616161;
+    font-size: 12px;
+    padding: 35px;
+}
+
+.piecontenedor{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 10px;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+.piecontenedor ul{
+    margin: 0 auto;
+}
+
+.piecontenedor ul li{
+    line-height: 2;
+}
+
+.footer{
+    background: #2f3640;
+    color: #616161;
+    font-size: 12px;
+    padding: 20px 0 ;
+    text-align: center;
+    padding-bottom: 20px;
+
+}
+
+
+@media(max-width: 700px){
+    .nav-main ul.nav-menu{
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background:#2f3640;
+        height: 100%;
+        transform: translate(-400px);
+        padding: 30px;
+        opacity: .8; 
+        transition: transform .5s ease-in-out;
+    }
+
+    .nav-main ul.nav-menu.show{
+          transform: translate(-80px);
+    }
+ 
+    .nav-main ul.nav-menu{
+        padding: 20px;
+        font-size: 15px;
+    }
+    .newcards{
+        grid-template-columns: repeat(2,1fr);
+    }
+    .bannercard .contenido
+    .bannercard2 .contenido
+    {
+        width: 80%;
+    }
+
+    .pielinks .piecontenedor{
+        grid-template-columns: repeat(2,1fr);
+    }
+
+}
