--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
     right: 30px;
     z-index: 2;
     font-size: 1.8rem;
+    display: none;
 }
 
 .nav-main ul.nav-menu-right{
@@ -286,6 +287,9 @@ hr{
 
 
 @media(max-width: 700px){
+    .menubtn{
+        display: block;
+    }
     .nav-main ul.nav-menu{
         display: block;
         position: absolute;
@@ -293,14 +297,14 @@ hr{
         left: 0;
         background:#2f3640;
         height: 100%;
-        transform: translate(-400px);
+        transform: translateX(-400px);
         padding: 30px;
         opacity: .8; 
         transition: transform .5s ease-in-out;
     }
 
     .nav-main ul.nav-menu.show{
-          transform: translate(-80px);
+          transform: translateX(-50px);
     }
  
     .nav-main ul.nav-menu{
@@ -320,4 +324,24 @@ hr{
         grid-template-columns: repeat(2,1fr);
     }
 
+}
+
+
+@media(max-width: 500px){
+    .menubtn{
+        display: block;
+    }
+    .newcards{
+        grid-template-columns: 1fr
+}
+    .newcards img{
+        height: 270px;
+    }    
+    
+    .bannercard .contenido,
+    .bannercard2 .contenido
+    {
+        width: 100%;
+        padding: 60px 20px;
+    }
 }
